samples/_failures_safe/1761089655_59627e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0310b4b.c: In function ‘main’:
./samples/SAFE/__tmp_a0310b4b.c:153:1: error: expected declaration or statement at end of input
  153 | int main() {
      | ^~~
